[package]
name = "caelestia-live"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["default_app", "2d_bevy_render", "bevy_winit", "x11", "wayland", "multi_threaded"] }
bevy_live_wallpaper = { version = "0.5.0", features = ["wayland"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy-ecs-svg = "0.1.0"
